--- a/horese_racing/src/components/game/gameBoard/GameBoard.scss
+++ b/horese_racing/src/components/game/gameBoard/GameBoard.scss
@@ -1,15 +1,21 @@
 .game-board{
   display: flex;
   &--left{
-    flex: 0 0 20%;
+    display: flex;
+    flex: 0 0 25%;
+    max-height: 750px;
+    overflow: auto;
   }
   &--center{
-    flex: 0 0 50%;
+    display: flex;
+    flex: 0 0 40%;
+    max-height: 750px;
+    overflow: auto;
   }
   &--right{
-    flex: 0 0 30%;
-    div{
-      flex: 0 0 50%;
-    }
+    display: flex;
+    flex: 0 0 35%;
+    max-height: 750px;
+    overflow: auto;
   }
 }
