--- a/horese_racing/src/components/game/gameBoard/schedules/scheduleDetails/ScheduleDetails.scss
+++ b/horese_racing/src/components/game/gameBoard/schedules/scheduleDetails/ScheduleDetails.scss
@@ -1,15 +1,16 @@
-.result-details{
+.schedule-details{
+
   &__header{
     display: flex;
     &--position{
       flex: 0 0 15%;
       text-align: center;
-      min-width: 40px;
+          min-width: 40px;
     }
     &--name{
       flex: 0 0 85%;
       text-align: center;
-      min-width: 40px;
+          min-width: 40px;
     }
   }
   &__content{
@@ -17,18 +18,12 @@
     &--position{
       flex: 0 0 15%;
       text-align: center;
-      min-width: 40px;
+          min-width: 40px;
     }
     &--name{
       flex: 0 0 85%;
       text-align: center;
-      min-width: 40px;
+          min-width: 40px;
     }
-  }
-}
-.result-list-details{
-  display: flex;
-  &__results{
-    min-height: 300px;
   }
 }
